# msiverca

./: .editorconfig  Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml  release.yml
examples/: ver.rs
examples/supported/: main.rs  product.wixproj  product.wxs
src/: lib.rs
